--- a/declarative_sqlite/pubspec.yaml
+++ b/declarative_sqlite/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  flutter:
+    sdk: flutter
   path: ^1.9.1
   meta: ^1.11.0
   equatable: ^2.0.5
@@ -15,6 +17,11 @@ dependencies:
   path_provider: ">1.0.0 <2.3.0-beta"
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   lints: ^4.0.0
   test: ^1.24.0
+  sqflite: ^2.3.3+1
   sqflite_common_ffi: ^2.3.6
+
+flutter: {}
