--- a/declarative_sqlite/pubspec.yaml
+++ b/declarative_sqlite/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   uuid: ^4.0.0
   sqflite_common: ^2.5.4+3
   path_provider: ">1.0.0 <2.3.0-beta"
+  crypto: ^3.0.6
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
