--- a/declarative_sqlite/pubspec.yaml
+++ b/declarative_sqlite/pubspec.yaml
@@ -10,26 +10,23 @@ dependencies:
   flutter:
     sdk: flutter
   path: ^1.9.1
-  meta: ^1.11.0
-  equatable: ^2.0.5
-  uuid: ^4.0.0
-  sqflite_common: ^2.5.4+3
-  path_provider: ">1.0.0 <2.3.0-beta"
+  meta: ^1.17.0
+  equatable: ^2.0.7
+  uuid: ^4.5.1
+  sqflite_common: ^2.5.6
+  path_provider: ^2.1.5
   crypto: ^3.0.6
   collection: ^1.19.1
-  async: ^2.11.0
-  pool: ^1.5.1
-  async_locks: ^1.0.0
+  async: ^2.13.0
+  pool: ^1.5.2
+  async_locks: ^4.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lints: ^4.0.0
-  test: ^1.24.0
-  sqflite: ^2.3.3+1
+  lints: ^6.0.0
+  test: ^1.26.3
+  sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.6
-  build_runner: ^2.4.10
-  declarative_sqlite_generator:
-    path: ../declarative_sqlite_generator
 
 flutter: {}
