--- a/declarative_sqlite_flutter/pubspec.yaml
+++ b/declarative_sqlite_flutter/pubspec.yaml
@@ -5,25 +5,26 @@ publish_to: none
 repository: https://github.com/graknol/declarative_sqlite
 
 environment:
-  sdk: ^3.5.3
-  flutter: ">=3.10.0"
+  sdk: ^3.9.2
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   declarative_sqlite:
     path: ../declarative_sqlite
-  sqflite: ^2.3.4
-  equatable: ^2.0.5
+  sqflite_common: ^2.5.6
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
   # Testing dependencies
-  test: ^1.24.0
-  mockito: ^5.4.4
-  build_runner: ^2.4.13
+  test: ^1.26.3
+  mockito: ^5.5.1
+  build_runner: ^2.8.0
+  sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.6
 
 flutter:
