--- a/declarative_sqlite_generator/pubspec.yaml
+++ b/declarative_sqlite_generator/pubspec.yaml
@@ -5,27 +5,27 @@ repository: https://github.com/graknol/declarative_sqlite
 publish_to: none
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.9.2
 
 dependencies:
   # Core build system dependencies
-  build: ^2.4.1
-  build_config: ^1.1.1
-  source_gen: ^1.5.0
-  analyzer: ^6.4.1
-  glob: ^2.1.2
+  build: ^4.0.0
+  build_config: ^1.2.0
+  source_gen: ^4.0.1
+  analyzer: ^8.2.0
+  glob: ^2.1.3
 
   # Code generation utilities
-  code_builder: ^4.10.0
-  dart_style: ^2.3.6
+  code_builder: ^4.11.0
+  dart_style: ^3.1.2
 
   # Reference to the main library for schema metadata
   declarative_sqlite:
     path: ../declarative_sqlite
 
 dev_dependencies:
-  lints: ^4.0.0
-  test: ^1.24.0
-  build_runner: ^2.4.7
-  build_test: ^2.2.0
-  sqflite_common_ffi: ^2.3.4+4 # For examples
+  lints: ^6.0.0
+  test: ^1.26.3
+  build_runner: ^2.8.0
+  build_test: ^3.4.0
+  sqflite_common_ffi: ^2.3.6 # For examples
