--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.8.0
   declarative_sqlite_generator:
     path: ../declarative_sqlite_generator
 
