--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     path: ../declarative_sqlite
   declarative_sqlite_flutter:
     path: ../declarative_sqlite_flutter
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
