--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   declarative_sqlite_flutter:
     path: ../declarative_sqlite_flutter
   uuid: ^4.5.1
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
