--- a/declarative_sqlite_generator/pubspec.yaml
+++ b/declarative_sqlite_generator/pubspec.yaml
@@ -25,4 +25,5 @@ dependencies:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+  build_test: ^3.4.0
   sqflite_common_ffi: ^2.3.6 # For examples
