--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -9,10 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  declarative_sqlite:
-    path: ../declarative_sqlite
-  declarative_sqlite_flutter:
-    path: ../declarative_sqlite_flutter
+  declarative_sqlite: ^1.0.2
+  declarative_sqlite_flutter: ^1.0.2
   uuid: ^4.5.1
   sqflite: ^2.4.2
 
@@ -21,8 +19,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   build_runner: ^2.4.13
-  declarative_sqlite_generator:
-    path: ../declarative_sqlite_generator
+  declarative_sqlite_generator: ^1.0.2
 
 flutter:
   uses-material-design: true
