--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "declarative-sqlite",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "TypeScript port of declarative_sqlite for PWA and Capacitor applications - Zero code generation, type-safe SQLite with automatic migration",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -61,8 +61,12 @@
   "peerDependencies": {
     "rxjs": "^7.8.0"
   },
-  "devDependencies": {
+  "dependencies": {
     "@sqlite.org/sqlite-wasm": "^3.47.2-build1",
+    "@zenfs/core": "^2.4.4",
+    "@zenfs/dom": "^1.2.5"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "@vitest/coverage-v8": "^1.0.0",
